@@ -98,7 +98,8 @@ Version CVS HEAD (?)
     - RT-safeness: avoid malloc in audio thread
     - fixed a bug that could cause voice stealing to fail
     - fine-tuned amplitude EG (by switching from gig to sfz EG)
-    - initial implementation of Vibrato LFO
+    - initial implementation of Vibrato LFO and Modulation LFO
+    - initial implementation of cutoff filter
 
   * Gigasampler format engine:
     - bugfix: pitch LFO controller "internal+aftertouch" was broken
